# Ultra-Light-Fast-Generic-Face-Detector-1MB

./: .gitignore  .gitmodules  LICENSE  Python_tests.yml  README.md  README_CN.md  README_EN.md  cal_flops.py  check_gt_box.py  convert_to_onnx.py  detect.py  detect.sh  detect_imgs.py  detect_imgs_onnx.py  detect_video.sh  evaluation_on_widerface.py  get_frame.py  label_map.json  requirements.txt  run_video_face_detect.py  run_video_face_detect_onnx.py  train-version-RFB.sh  train-version-slim.sh  train.py  train_mb_tiny_RFB_fd.sh  train_mb_tiny_fd.sh
MNN/: CMakeLists.txt  README.md
MNN/Android/: README.md  build.gradle
MNN/Android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
MNN/Android/app/src/androidTest/java/com/facesdk/: ExampleInstrumentedTest.java
MNN/Android/app/src/main/: AndroidManifest.xml
MNN/Android/app/src/main/cpp/: UltraFace.cpp  UltraFace.hpp  Ultra_jni.cpp  net.cpp  net.h
MNN/Android/app/src/main/java/com/facesdk/: FaceSDKNative.java  MainActivity.java
MNN/Android/app/src/main/res/layout/: activity_main.xml  main.xml
MNN/Android/app/src/main/res/values/: strings.xml
MNN/Android/app/src/test/java/com/facesdk/: ExampleUnitTest.java
MNN/python/: README.md  ultraface_py_mnn.py
MNN/src/: UltraFace.cpp  UltraFace.hpp  main.cpp
MNN/ultraface_mnn_py/: README.md  ultraface_py_mnn.py
MNN/x86/: CMakeLists.txt
MNN/x86/mnn/include/: revertMNNModel.hpp
MNN/x86/model/version-RFB/: RFB-320-quant-ADMM-32.mnn  RFB-320.mnn
MNN/x86/model/version-slim/: slim-320.mnn
MNN/x86/src/: UltraFace.hpp
caffe/: README.md  convertCaffe.py  ultra_face_caffe_inference.py  ultra_face_opencvdnn_inference.py
caffe/onnx2caffe/: _operators.py  _weightloader.py
data/: wider_face_2_voc_add_landmark.py
masked_face/: README.md  detect_imgs.py  mafa2voc.py  voc-model-labels.txt
masked_face/pretrained/: RFB-1280-masked_face-v2.onnx  RFB-320-masked_face-v2.pth  RFB-640-masked_face-v2.onnx  RFB-640-masked_face-v2.pth
models/: readme  voc-model-labels.txt
models/onnx/: Mb_Tiny_RFB_FD_train_input_320.onnx  Mb_Tiny_RFB_FD_train_input_640.onnx  RFB-Epoch-499-Loss-2.onnx  RFB.onnx  version-RFB-320_128.onnx  version-RFB-320_ncnn.onnx  version-RFB-320_ncnn_slim.onnx  version-RFB-640.onnx  version-slim-320.onnx  version-slim-320_128.onnx  version-slim-320_ncnn_slim.onnx  version-slim-320_without_postprocessing.onnx
models/pretrained/: Mb_Tiny_RFB_FD_train_input_640.pth  version-RFB-320.pth  version-slim-320.pth  version-slim-640.pth
models/train-version-RFB/: RFB-Epoch-0-Loss-6.496268930889311.pth  RFB-Epoch-100-Loss-2.716068074816749.pth  RFB-Epoch-120-Loss-2.8258132253374373.pth  RFB-Epoch-140-Loss-2.8013703028361.pth  RFB-Epoch-160-Loss-2.710414012273153.pth  RFB-Epoch-180-Loss-2.6810942604428245.pth  RFB-Epoch-20-Loss-3.7015854631151472.pth  RFB-Epoch-200-Loss-2.701671838760376.pth  RFB-Epoch-220-Loss-2.756676355997721.pth  RFB-Epoch-240-Loss-2.6730295589991977.pth  RFB-Epoch-260-Loss-2.8818901834033785.pth  RFB-Epoch-280-Loss-2.635728222983224.pth  RFB-Epoch-300-Loss-2.6390312853313627.pth  RFB-Epoch-320-Loss-2.640328816005162.pth  RFB-Epoch-340-Loss-2.688357421330043.pth  RFB-Epoch-360-Loss-2.649921076638358.pth  RFB-Epoch-380-Loss-2.6444787979125977.pth  RFB-Epoch-40-Loss-3.124155180794852.pth  RFB-Epoch-400-Loss-2.6486477511269704.pth  RFB-Epoch-420-Loss-2.635296208517892.pth  RFB-Epoch-440-Loss-2.647673323040917.pth  RFB-Epoch-460-Loss-2.6515767460777644.pth  RFB-Epoch-480-Loss-2.655152581986927.pth  RFB-Epoch-499-Loss-2.6552731423150924.pth  RFB-Epoch-60-Loss-2.9623304775782993.pth  RFB-Epoch-80-Loss-2.8106768017723445.pth  voc-model-labels.txt
models/train-version-slim/: slim-Epoch-0-Loss-6.425213904607864.pth  slim-Epoch-100-Loss-2.7907819066728865.pth  slim-Epoch-120-Loss-2.7421183472587947.pth  slim-Epoch-140-Loss-2.8290770394461497.pth  slim-Epoch-160-Loss-2.7287836301894415.pth  slim-Epoch-180-Loss-2.829715308688936.pth  slim-Epoch-20-Loss-3.5739944889431907.pth  slim-Epoch-200-Loss-2.710536150705247.pth  slim-Epoch-220-Loss-2.7509674344744.pth  slim-Epoch-240-Loss-2.7085068907056535.pth  slim-Epoch-260-Loss-2.682651996612549.pth  slim-Epoch-280-Loss-2.645934740702311.pth  slim-Epoch-300-Loss-2.642999842053368.pth  slim-Epoch-320-Loss-2.6618120216187977.pth  slim-Epoch-340-Loss-2.6736877872830345.pth  slim-Epoch-360-Loss-2.6601163205646334.pth  slim-Epoch-380-Loss-2.68576633362543.pth  (+9 more)
models/train-version-slim-origin/: slim-Epoch-199-Loss-2.7161087422143844.pth
ncnn/: .clang-format  CMakeLists.txt  README.md  UltraFace.cpp  UltraFace.hpp  main.cpp
ncnn/data/version-RFB/: RFB-320.param
ncnn/data/version-slim/: slim_320.param
ncnn/source/: ncnn.param
ncnn/src/: UltraFace.cpp  UltraFace.hpp  main.cpp
opencv_dnn/: cv_dnn_ultraface.cpp  cv_dnn_ultraface.h
paddle/: train-version-slim.sh  train.py
tf/: README.md  convert_tensorflow.py  det_image.py
tf/backend/: op.py  utils.py
tflite/: README.md  TFLiteFaceDetector.py  inference_test.py
widerface_evaluate/: README.md  evaluation.py  evaluation_on_widerface.py
(+54 files in other folders)
